--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -7,20 +7,20 @@
 
   .status-text {
     background: $default-background;
-    transition: all $interactive-animation-time;
+    transition: inherit;
   }
 
   &.active {
     background: $white;
     color: $black;
-    transition: all $interactive-animation-time;
+    transition: inherit;
 
     .card-section {
       border-bottom-color: $blue;
 
       .status-text {
         background: $white;
-        transition: all $interactive-animation-time;
+        transition: inherit;
       }
     }
   }
