--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -9,20 +9,20 @@
 
   .status-text {
     background: $default-background;
-    transition: all $interactive-animation-time;
+    transition: inherit;
   }
 
   &.active {
     background: $white;
     color: $black;
-    transition: all $interactive-animation-time;
+    transition: inherit;
 
     .card-section {
       border-bottom-color: $blue;
 
       .status-text {
         background: $white;
-        transition: all $interactive-animation-time;
+        transition: inherit;
       }
     }
   }
