--- a/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.scss
+++ b/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.scss
@@ -2,16 +2,13 @@
 @import '../../../../../../assets/styles/mixins';
 
 .price {
+  @include default-view-container;
   display: flex;
   width: 100%;
   height: 34px;
   padding: 0 $default-margin;
-  font-size: $tiny-font-size;
   align-items: center;
-  background-color: $default-background;
   margin-top: 10px;
-  border-bottom: $border;
-  transition: background-color $interactive-animation-time;
 
   .rate {
     margin-left: 5px;
