fixed issue with bd-buttons

--- a/src/app/companies/components/company-edit/components/company-edit-location/company-edit-location.component.html
+++ b/src/app/companies/components/company-edit/components/company-edit-location/company-edit-location.component.html
@@ -1,4 +1,4 @@
-<div class="company-edit-locaion" *ngIf="selectedItem">
+<div class="company-edit-location" *ngIf="selectedItem">
   <bd-form-spinner *ngIf="isLoading$ | async"></bd-form-spinner>
 	<form-navigation
     sticky
