--- a/src/app/companies/components/company-edit/components/company-edit-location/company-edit-location.component.scss
+++ b/src/app/companies/components/company-edit/components/company-edit-location/company-edit-location.component.scss
@@ -1,4 +1,6 @@
-.company-edit-locaion {
+@import '../../../../../../assets/styles/styles';
+
+.company-edit-location {
   display: block;
   padding-top: 70px;
 }
