FSPA-456 add reducers for location/contacts deletion

--- a/src/app/companies/components/company-detail/components/company-address/company-address.component.html
+++ b/src/app/companies/components/company-detail/components/company-address/company-address.component.html
@@ -1,4 +1,4 @@
-<default-component-action-panel (edit)="onEdit()">
+<default-component-action-panel (edit)="onEdit()" (remove)="onRemove()">
   <div class="location-container interactive-background">
     <div class="left">
       <div class="name interactive-text">
