--- a/src/app/companies/components/company-detail/company-detail.component.html
+++ b/src/app/companies/components/company-detail/company-detail.component.html
@@ -8,11 +8,11 @@
     </bd-view-detail-section>
     <navigation-anchor id="address"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Location'" [addContent]="'add location'" [editButton]="false" (addClick)="onAddLocationClick()">
-        <company-address *ngFor="let location of selectedItem.locations" [location]="location"></company-address>
+      <company-address *ngFor="let location of selectedItem.locations" [location]="location" (remove)="onLocationRemove($event)"></company-address>
     </bd-view-detail-section>
     <navigation-anchor id="contacts"></navigation-anchor>
     <bd-view-detail-section [labelText]="'Contacts'" [addContent]="'add contact'" [editButton]="false" (addClick)="onAddContactClick()">
-        <company-contact *ngFor="let contact of selectedItem.contacts" [contact]="contact"></company-contact>
+      <company-contact *ngFor="let contact of selectedItem.contacts" [contact]="contact" (remove)="onContactRemove($event)"></company-contact>
     </bd-view-detail-section>
   </div>
 </div>
