--- a/src/app/shared/components/component-action-panel/components/default-list-buttons/default-list-buttons.component.html
+++ b/src/app/shared/components/component-action-panel/components/default-list-buttons/default-list-buttons.component.html
@@ -1,2 +1,2 @@
-<default-edit-remove-button (click)="onEditClick()" (click)="onRemoveClick()"></default-edit-remove-button>
+<default-edit-remove-button (edit)="onEditClick()" (remove)="onRemoveClick()"></default-edit-remove-button>
 <default-drag-n-drop-button></default-drag-n-drop-button>
