FSPA-450 update popover styles and behaviour

--- a/src/app/shared/components/component-action-panel/components/default-edit-remove-button/default-edit-remove-button.component.html
+++ b/src/app/shared/components/component-action-panel/components/default-edit-remove-button/default-edit-remove-button.component.html
@@ -1,7 +1,7 @@
 <div
   class="control icon-menu"
   [bd-popover]="additionalControlsPopover"
-  [popoverOnHover]="true">
+  [popoverAnimation]="false">
     <bd-popover-content
       #additionalControlsPopover
       placement="left"
