--- a/src/app/shared/components/component-action-panel/components/default-edit-remove-button/default-edit-remove-button.component.scss
+++ b/src/app/shared/components/component-action-panel/components/default-edit-remove-button/default-edit-remove-button.component.scss
@@ -2,7 +2,7 @@
 @import '../../../../../../assets/styles/font-icons';
 
 .control {
-  margin: 3px 0;
+  padding: 5px;
   color: $white;
   font-size: 12px;
   cursor: pointer;
