--- a/src/app/shared/components/component-action-panel/components/default-drag-n-drop-button/default-drag-n-drop-button.component.scss
+++ b/src/app/shared/components/component-action-panel/components/default-drag-n-drop-button/default-drag-n-drop-button.component.scss
@@ -2,12 +2,8 @@
 @import '../../../../../../assets/styles/font-icons';
 
 .control {
-  margin: 3px 0;
+  padding: 5px;
   color: $dark-grey;
   font-size: 12px;
   cursor: move;
-
-  &:hover {
-    color: $blue;
-  }
 }
