--- a/src/app/shared/components/component-action-panel/components/list-buttons-control/list-buttons-control.component.scss
+++ b/src/app/shared/components/component-action-panel/components/list-buttons-control/list-buttons-control.component.scss
@@ -20,7 +20,8 @@
     width: 35px;
     padding: 5px 0;
     background: $grey;
-    border-radius: $default-border-radius;
+    border-top-right-radius: $default-border-radius;
+    border-bottom-left-radius: $default-border-radius;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
