--- a/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.html
+++ b/src/app/loads/components/load-edit/components/load-edit-stop/load-edit-stop.component.html
@@ -7,13 +7,13 @@
     [anchors]="anchors">
   </form-navigation>
   <bd-form-section [disabled]="disabled" [labelText]="'Contact'">
-    <stop-form
+    <!--<stop-form
       [contact]="selectedItem"
       [disabled]="isLoading"
       [scrollable]="true"
       [viewMode]="viewMode"
    >
-    </stop-form>
+    </stop-form>-->
     <form-sticky-bottom-container [sticky]="true" [stickyPositionInsideScroll]="true">
       <div class="button-group">
         <bd-button [disabled]="disabled" (click)="onItemCancel()" [text]="'Cancel'" class="button">
