FSPA-464 #comment changed status text bg when mouse on the card

--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -104,6 +104,10 @@
 
     &:hover {
       background: $light-blue;
+
+      .status-text {
+        background: $light-blue;
+      }
     }
   }
 
