--- a/src/app/forms/stop-form/stop-form.component.html
+++ b/src/app/forms/stop-form/stop-form.component.html
@@ -1,1 +1,1 @@
- <stop-actions-form [formArray]="loadForm.controls.stopActions" [items]="stop.stopActions" [viewMode]="viewMode"></stop-actions-form>
+ <stop-actions-form [formArray]="stopForm.controls.stopActions" [items]="stop.stopActions" [viewMode]="viewMode"></stop-actions-form>
