--- a/src/app/loads/components/load-edit/components/load-edit-info/load-edit-info.component.html
+++ b/src/app/loads/components/load-edit/components/load-edit-info/load-edit-info.component.html
@@ -6,10 +6,11 @@
     sticky 
     [stickyPositionInsideScroll]="true">
   </form-navigation>
-  <load-form
+  <load-info-form
     (save)="onItemSave($event)"
     (cancel)="onItemCancel($event)"
+    (addCustomer)="onAddCustomer()"
     [load]="selectedItem"
     [viewMode]="viewMode">
-  </load-form>
+  </load-info-form>
 </div>
