FSPA-529 #comment showed middle name for user inside driver card and form, update bd-user-circle component, code refactoring

--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -11,7 +11,7 @@ class="card-section"
       </bd-user-circle>
     </div>
     <div class="driver-full-name ellipsis">
-      {{item.firstName}} {{item.lastName}}
+      {{fullName}}
     </div>
     <div class="driver-type">{{driverTypeText}}</div>
   </div>
