--- a/src/app/drivers/components/driver-detail/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail/driver-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="selectedItem">
-  <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="driverFullName" [anchors]="anchors">
+  <form-navigation sticky [stickyPositionInsideScroll]="true" [title]="fullName" [anchors]="anchors">
     <bd-form-button [buttonText]="'edit'" buttonType="small" (click)="onEdit()">
     </bd-form-button>
   </form-navigation>
