--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -25,8 +25,8 @@
     font-weight: 300;
     text-transform: uppercase;
     align-self: flex-start;
-    margin-left: -17px;
-    margin-right: 32px;
+    margin-left: -$default-margin;
+    margin-right: $default-margin * 2;
     align-items: center;
     justify-content: flex-end;
   }
@@ -45,6 +45,10 @@
       margin-left: 5px;
       margin-right: 7px;
       font-weight: normal;
+
+      &:first-child {
+        margin-left: 2px;
+      }
 
       bd-checkbox {
         margin-right: 5px;
