FSPA-553 add load view info

--- a/src/app/forms/load-info-form/load-info-form.component.html
+++ b/src/app/forms/load-info-form/load-info-form.component.html
@@ -8,7 +8,7 @@
   </bd-form-section>
   <navigation-anchor id="requirements"></navigation-anchor>
   <bd-form-section labelText="REQUIREMENTS">
-    <bd-form-switch class="bd-form-control" [labelText]="'Driver'" [enableButtonSwitch]="isEditMode" formControlName="driverRequirement" [items]="driverRequirementsNames">
+    <bd-form-switch class="bd-form-control" [labelText]="'Driver'" [enableButtonSwitch]="isEditMode" formControlName="driverRequirment" [items]="driverRequirementsNames">
     </bd-form-switch>
     <bd-dropdown class="bd-form-control" [labelText]="'Power unit'" formControlName="requiredPowerUnitType" [items]="requiredPowerUnitTypesNames">
     </bd-dropdown>
