--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -4,15 +4,19 @@
         </bd-form-button>
     </form-navigation>
     <form>
-        <navigation-anchor id="customer"></navigation-anchor>
+        <navigation-anchor id="load-view"></navigation-anchor>
+        <bd-view-detail-section [labelText]="'Load'" [editButton]="true" [addButton]="false" (editClick)="onLoadEditClick()">
+            <load-view [load]="selectedItem"></load-view>
+        </bd-view-detail-section>
+        <navigation-anchor id="requirements-view"></navigation-anchor>
+        <bd-view-detail-section [labelText]="'Requirements'" [editButton]="true" [addButton]="false" (editClick)="onLoadEditClick()">
+            <requirements-detail [load]="selectedItem"></requirements-detail>
+        </bd-view-detail-section>
+        <navigation-anchor id="customer-view"></navigation-anchor>
         <bd-view-detail-section [labelText]="'Customer'" [editButton]="false" [addButton]="false">
             <customer-detail [company]="selectedItem.customer" [selectedContact]="selectedContact"></customer-detail>
         </bd-view-detail-section>
-        <navigation-anchor id="requirements"></navigation-anchor>
-        <bd-view-detail-section [labelText]="'Requirements'" [editButton]="false" [addButton]="false">
-            <requirements-detail [load]="selectedItem"></requirements-detail>
-        </bd-view-detail-section>
-        <navigation-anchor id="itinerary"></navigation-anchor>
+        <navigation-anchor id="itinerary-view"></navigation-anchor>
         <bd-view-detail-section [labelText]="'Itinerary'" [editButton]="false" [addButton]="false">
             <stop-view (remove)="onStopRemove($event)" (edit)="onStopEdit($event)"
                 *ngFor="let stop of selectedItem.stops"
