--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -15,8 +15,8 @@
         <navigation-anchor id="itinerary"></navigation-anchor>
         <bd-view-detail-section [labelText]="'Itinerary'" [editButton]="false" [addButton]="false">
             <stop-view (remove)="onStopRemove($event)" (edit)="onStopEdit($event)"
-                *ngFor="let stop of selectedItem.stops"
-                [stop]="stop">
+              *ngFor="let stop of selectedItem.stops; trackBy: trackBy;"
+              [stop]="stop">
             </stop-view>
         </bd-view-detail-section>
     </form>
