--- a/src/app/auth/forms/register-form/register-form.component.html
+++ b/src/app/auth/forms/register-form/register-form.component.html
@@ -7,20 +7,20 @@
   <div class="section">
       <bd-validator [component]="registerForm.controls.firstName" [errorDefs]="{required: 'Firstname is required'}">
         <bd-input
-          class="bd-form-control section-control"
+          class="bd-form-control section-control left-control"
           placeholder="First Name"
           [required]="true"
           formControlName="firstName">
         </bd-input>
     </bd-validator>
     <bd-input
-      class="bd-form-control section-control"
+      class="bd-form-control section-control middle-control"
       placeholder="Middle Name"
       formControlName="middleName">
     </bd-input>
   <bd-validator [component]="registerForm.controls.lastName" [errorDefs]="{required: 'Lastname is required'}">
     <bd-input
-      class="bd-form-control section-control"
+      class="bd-form-control section-control right-control"
       placeholder="Last Name"
       [required]="true"
       formControlName="lastName">
