--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -1,5 +1,6 @@
 <div [formGroup]="commodityForm">
   <div class="c-row">
+    <div class="c-cols">
       <input class="c-col"
         *ngFor="let field of visibleFields(_fields); let i = index; trackBy:trackByIndex"
         [attr.index]="i"
@@ -7,6 +8,7 @@
         [type]="field.type"
         (blur)="onBlur($event)"
         (focus)="onFocus($event)">
+    </div>
   </div>
   <bd-remove-button
     class="bd-form-control"
