--- a/src/app/auth/forms/new-password-form/new-password-form.component.html
+++ b/src/app/auth/forms/new-password-form/new-password-form.component.html
@@ -6,7 +6,7 @@
   <bd-validator [component]="newPasswordForm.controls.password"
     [errorDefs]="{required: 'This field is required'}">
     <bd-input
-      class="bd-form-control"
+      class="bd-form-control password"
       [type]="'password'"
       [labelText]="'New Password'"
       formControlName="password">
@@ -16,7 +16,7 @@
   <bd-validator [component]="newPasswordForm.controls.retryPassword"
     [errorDefs]="{required: 'This field is required'}">
     <bd-input
-      class="bd-form-control"
+      class="bd-form-control retry-password"
       [type]="'password'"
       [labelText]="'Confirm Password'"
       formControlName="retryPassword">
@@ -30,7 +30,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button"
+    class="button submit"
     [(disabled)]="!newPasswordForm.valid"
     [text]="'Submit'">
   </bd-button>
