--- a/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
@@ -9,6 +9,7 @@
 
   <bd-form-switch class="bd-form-control"
     formControlName="userNameType"
+    class="user-name-type"
     [hideLabel]="true"
     [enableButtonSwitch]="true"
     [items]="constants.USER_NAME_TYPES">
@@ -18,7 +19,7 @@
     [component]="passwordRecoveryForm.controls.email"
     [errorDefs]="{required: 'This field is required', isValidMailFormat: 'Email entered not correct.'}">
     <bd-input
-      class="bd-form-control"
+      class="bd-form-control email"
       [labelText]="'Email'"
       formControlName="email">
     </bd-input>
@@ -27,7 +28,7 @@
     [component]="passwordRecoveryForm.controls.cellphone"
     [errorDefs]="{required: 'This field is required', isValidPhoneFormat: 'Phone number does not comply with standard format.'}">
     <bd-input
-      class="bd-form-control"
+      class="bd-form-control cellphone"
       [labelText]="'Phone'"
       formControlName="cellphone">
     </bd-input>
@@ -37,7 +38,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button"
+    class="button next"
     [(disabled)]="!passwordRecoveryForm.valid"
     [text]="'Next'">
   </bd-button>
