--- a/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
@@ -28,7 +28,7 @@
     [component]="passwordRecoveryForm.controls.cellphone"
     [errorDefs]="{required: 'This field is required', isValidPhoneFormat: 'Phone number does not comply with standard format.'}">
     <bd-input
-      class="bd-form-control cellphone"
+      class="bd-form-control cell-phone"
       [labelText]="'Phone'"
       formControlName="cellphone">
     </bd-input>
