--- a/src/app/auth/forms/login-form/login-form.component.html
+++ b/src/app/auth/forms/login-form/login-form.component.html
@@ -22,7 +22,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button login"
+    class="button login-button"
     [(disabled)]="!loginForm.valid"
     [text]="'Login'">
   </bd-button>
