--- a/src/app/auth/forms/new-password-form/new-password-form.component.html
+++ b/src/app/auth/forms/new-password-form/new-password-form.component.html
@@ -30,7 +30,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button submit"
+    class="button submit-button"
     [(disabled)]="!newPasswordForm.valid"
     [text]="'Submit'">
   </bd-button>
