--- a/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
+++ b/src/app/auth/forms/password-recovery-form/password-recovery-form.component.html
@@ -38,7 +38,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button next"
+    class="button next-button"
     [(disabled)]="!passwordRecoveryForm.valid"
     [text]="'Next'">
   </bd-button>
