--- a/src/app/auth/forms/register-form/register-form.component.html
+++ b/src/app/auth/forms/register-form/register-form.component.html
@@ -74,7 +74,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button next"
+    class="button next-button"
     [(disabled)]="!registerForm.valid"
     [text]="'Next'">
   </bd-button>
