--- a/src/app/auth/forms/register-phone-confirmation-form/register-phone-confirmation-form.component.html
+++ b/src/app/auth/forms/register-phone-confirmation-form/register-phone-confirmation-form.component.html
@@ -18,7 +18,7 @@
   <bd-button
     type="submit"
     color="primary"
-    class="button confirm"
+    class="button confirm-button"
     [(disabled)]="!phoneForm.valid"
     [text]="'Confirm'">
   </bd-button>
