FSPA-555 make work stop creation

--- a/src/app/loads/components/load-detail/components/stop-view/stop-view.component.html
+++ b/src/app/loads/components/load-detail/components/stop-view/stop-view.component.html
@@ -12,7 +12,7 @@
                   <span class="item-icon icon-location"></span>
                   <span class="item-text facility-address">{{stop.facility.address.streetAddress1}}, {{stop.facility.address.city}}, {{stop.facility.address.state}}, {{stop.facility.address.zip}}</span>
               </div>
-              <bd-contact-info [contactCollection]="getContactInfoCollection(stop.facility.contactInfo)"></bd-contact-info>
+              <bd-contact-info [contactCollection]="getContactInfoCollection(stop.facility?.contactInfo)"></bd-contact-info>
           </div>
           <div class="business-hours-container">
               <div class="btn-container">
