--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
@@ -9,11 +9,11 @@
     </button>
   </div>
   <div class="bottom">
-    <bd-user-circle
-      [fullName]="fullName">
-    </bd-user-circle>
+    <bd-circle
+      [initials]="initials">
+    </bd-circle>
     <div class="right">
-      <div class="title">{{fullName}}</div>
+      <div class="title">{{title}}</div>
       <div class="message">
         {{notification.message}}
       </div>
